made minor bug fixes

--- a/todo2.css
+++ b/todo2.css
@@ -31,11 +31,12 @@ body {
   padding: 0 10px;font-size: 20px;
 }
 .todo-list {
-  min-height: 400px;
+ 
   height: 450px;
   opacity: 1;
   transition: 1s;
   overflow-y: scroll;
+  /* this is a branch that includes this comment */
 }
 .btn-container {
   display: flex;
